--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "morgan": "^1.10.0",
-        "multiparty": "^4.2.2",
-        "pug": "^3.0.0"
+        "multiparty": "^4.2.2"
     }
 }
